# Workshop_AI_MachineLearning

./: 0000-index.ipynb  0000_Installation.docx  0111-the_machine_learning_landscape.ipynb  0121-numpy.ipynb  0122-pandas.ipynb  0210-end_to_end_machine_learning_project.ipynb  0230-exercise_solar.ipynb  0310-classification.ipynb  0320-exercise_heart.ipynb  0410-training_models.ipynb  0420-Women_clothing_sizes_Prediction.ipynb  0510-support_vector_machines.ipynb  0520-exercise_demographic_studentscore_svm.ipynb  0610-decision_trees.ipynb  0620-exercise_penguins.ipynb  0710-ensemble_learning_and_random_forests.ipynb  0720-exercise_churn.ipynb  0810-dimensionality_reduction.ipynb  0830_exercise_wholesale.ipynb  0910-unsupervised_learning.ipynb  0931-association_rules_demo.ipynb  0932-association_rules_exercise.ipynb  1010-neural_nets_with_keras.ipynb  1011-exercise_penguins.ipynb  1110-training_deep_neural_networks.ipynb  1111-exercise_churn.ipynb  1210-deep_computer_vision_with_cnns.ipynb  1211-deep_computer_vision_with_cnns_exercise_mnist.ipynb  1410-nlp.ipynb  Installation.docx  pyproject.toml  rules.csv
solutions/: 0230-exercise_solar_solution.ipynb
