[project]
name = "Workshop-AI-Machine-Learning"
version = "0.1.0"
description = "Author: Johan Decorte"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "gensim>=4.3.2",
    "graphviz>=0.21",
    "groq>=0.31.0",
    "iprogress>=0.4",
    "ipykernel>=6.30.1",
    "keras>=3.11.3",
    "langchain>=0.3.7",
    "langchain-huggingface>=0.3.1",
    "matplotlib>=3.10.5",
    "mlxtend>=0.23.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "tensorflow>=2.20.0",
    "tf-keras>=2.15.0",
    "transformers>=4.55.4",
]

[tool.uv.sources]
swarm = { git = "https://github.com/openai/swarm.git" }
